--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,5 +9,6 @@
 </head>
 <body>
     <nav>
-        <a href="/flights">All Flights</a>
+        <a href="/flights">All Flights</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="/flights/new">Add Flight</a>
     </nav>
