--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -4,10 +4,10 @@
 <table>
     <thead>
         <tr>
-          <th>Airline</th>
-          <th>Airport</th>
-          <th>Flight No</th>
-          <!-- <th>Departs</th> -->
+          <th>Airline |</th>
+          <th>Airport |</th>
+          <th>Flight No |</th>
+          <th>Departs</th>
         </tr>
       </thead>
       <tbody>
@@ -16,7 +16,7 @@
                 <td><%= f.airline %></td>
                 <td><%= f.airport %></td>
                 <td><%= f.flightNo %></td>
-                <!-- <td><%= f.departs %></td> -->
+                <td><%= f.departs %></td>
             </tr>
         <% }); %>
     </tbody>
