--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -5,7 +5,7 @@
   <label>Airline:
     <select name="airline">
         <option value="American">American</option>
-        <option value="Southwest" selected>Soutwhest</option>
+        <option value="Southwest" selected>Southwest</option>
         <option value="United">United</option>
     </select>
   </label><br>
@@ -22,7 +22,7 @@
     <input type="number" name="flightNo">
   </label><br>
   <label>Departs:
-    <input type="datetime-local" name="departs">
+    <input type="datetime-local" name="departs" value="<%= departsDate %>">
   </label><br>
   <input type="submit" value="Add Flight">
 </form>
