--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -15,7 +15,7 @@
   <% }) %>
   <div>Ticket List: <% tickets.forEach(function(t) { %>
     <li>Seat: 
-    <%= t.seat %> || Price: 
+    <%= t.seat %> || Price: $
     <%= t.price %>
     </li>
   </div>
