--- a/views/tickets/new.ejs
+++ b/views/tickets/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header')%>
 
 <h2>Enter a New Ticket</h2>
-<form action="/flights/<%= flightId %>/tickets" method="POST">
+<form id="new-form" action="/flights/<%= flightId %>/tickets" method="POST">
   <label>Seat:
     <input type="text" name="seat" required pattern="[A-F][1-9]\d?">
   </label><br>
